# Polyglot-NER-project

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  LICENSE  README.md  app.py  data.dvc  data_notebooks.dvc  docker-compose.yml  final_model.dvc  model_checkpoints.dvc  models.dvc  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_cloud.py  style.css  train.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: ci.yml
notebooks/: 01_data_preprocessing.ipynb  02_tokenization.ipynb  03_model_fine_tuning.ipynb
src/: config.py  data_loader.py  data_pipeline.py  data_preprocessor.py  exception.py  logger.py  predict.py  predictor.py  train.py  trainer.py
tests/: __init__.py  conftest.py  test_app.py  test_data_loader.py  test_data_preprocessor.py  test_predictor.py
