[project]
name = "polyglot-ner-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "dagshub>=0.6.9",
    "datasets>=4.8.3",
    "dvc[s3]>=3.67.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "python-dotenv>=1.2.2",
    "seqeval>=1.2.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "wandb==0.25.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
