[project]
name = "polyglot-ner-project"
version = "0.1.0"
description = "A multilingual Named Entity Recognition project for Hungarian and German."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "fastapi>=0.135.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "evaluate>=0.4.0",
    "seqeval>=1.2.2",
    "accelerate>=0.33.0",
    "wandb>=0.17.0",
    "datasets>=2.21.0",
]
streamlit = [
    "streamlit>=1.38.0",
    "pandas>=2.0.0",
]
dev = [
    "dagshub>=0.3.0",
    "dvc[s3]>=3.50.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "notebooks",
    "venv",
    ".venv",
    "__pypackages__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Error, Flake8, Isort, Warning
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
